added functionality to buttons

--- a/src/App.css
+++ b/src/App.css
@@ -40,3 +40,8 @@
 .read-the-docs {
   color: #888;
 }
+.p-5 {
+  position: relative;
+  z-index: 10;
+  background: red !important; /* Debugging */
+}
